--- a/node_backend/01-express/package.json
+++ b/node_backend/01-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "01-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
+  }
 }
