--- a/node_backend/08-cookie-prac/package.json
+++ b/node_backend/08-cookie-prac/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "07-sequelize",
+  "name": "08-cookie-prac",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,12 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.2",
-    "sequelize": "^6.33.0",
-    "sequelize-cli": "^6.6.1"
-  },
-  "description": ""
+    "express": "^4.18.2"
+  }
 }
